chore: ignore .vscode/settings.json

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ export_presets.cfg
 .mono/
 data_*/
 
+##############################################
+#                   VS Code                  #
+##############################################
+gd-project/.vscode/settings.json
 
 # Created by https://www.gitignore.io/api/linux,windows
 
